fix(css): add overflow:hidden to #menu_popup
to cut of rounded corners of hovered link

--- a/static/style.css
+++ b/static/style.css
@@ -221,6 +221,7 @@ pre code {
   border-top-left-radius: 0;
   box-shadow: var(--shadow-big);
   z-index: 100;
+  overflow: hidden;
 }
 
 #menu_popup li * {
